--- a/Uobachi.Web/Properties/launchSettings.json
+++ b/Uobachi.Web/Properties/launchSettings.json
@@ -4,9 +4,9 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:5224",
-      "launchUrl": "graphql",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
