--- a/Uobachi.WebClient/Uobachi.WebClient.csproj
+++ b/Uobachi.WebClient/Uobachi.WebClient.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.20"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.20" PrivateAssets="all"/>
         <PackageReference Include="ReactiveProperty.Blazor" Version="9.7.0" />
+        <PackageReference Include="StrawberryShake.Blazor" Version="15.1.11" />
         <PackageReference Include="System.Reactive" Version="6.1.0" />
     </ItemGroup>
 
